FOC_V0.01(加载了AS5600程序软iic)

--- a/Output/Fire_FreeRTOS.build_log.htm
+++ b/Output/Fire_FreeRTOS.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  04/01/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\keil5\ARM\ARMCC\Bin'
 Build target 'Fire_FreeRTOS'
+compiling main.c...
+linking...
+Program Size: Code=13456 RO-data=336 RW-data=152 ZI-data=38632  
+FromELF: creating hex file...
 "..\..\Output\Fire_FreeRTOS.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -40,7 +44,7 @@ Package Vendor: Keil
   E:/keil5/PACK/Keil/STM32F1xx_DFP/1.0.5/Device/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
