--- a/Output/Fire_FreeRTOS.build_log.htm
+++ b/Output/Fire_FreeRTOS.build_log.htm
@@ -28,10 +28,13 @@ Project File Date:  04/01/2023
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\keil5\ARM\ARMCC\Bin'
 Build target 'Fire_FreeRTOS'
 compiling main.c...
+..\..\User\main.c(118): warning:  #550-D: variable "xReturn"  was set but never used
+    BaseType_t xReturn = pdPASS;/* 定义一个创建信息返回值，默认为pdPASS */
+..\..\User\main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=13456 RO-data=336 RW-data=152 ZI-data=38632  
+Program Size: Code=10496 RO-data=336 RW-data=156 ZI-data=38652  
 FromELF: creating hex file...
-"..\..\Output\Fire_FreeRTOS.axf" - 0 Error(s), 0 Warning(s).
+"..\..\Output\Fire_FreeRTOS.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
